-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 15
-
Component/s: hotspot
-
b07
-
x86_64
-
linux
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8285292 | 11.0.16-oracle | Ioi Lam | P2 | Closed | Fixed | b04 |
| JDK-8283568 | 11.0.16 | Zhengyu Gu | P2 | Resolved | Fixed | b01 |
| JDK-8298421 | openjdk8u372 | Jonathan Dowland | P2 | Resolved | Fixed | b01 |
| JDK-8359539 | shenandoah8u372 | Jonathan Dowland | P2 | Resolved | Fixed | b01 |
| JDK-8295293 | 8u361 | Ivan Bereziuk | P2 | Closed | Fixed | b03 |
/home/rehn/source/jdk/vanilla-jdk/open/src/hotspot/os/linux/cgroupSubsystem_linux.hpp:59: error: undefined reference to 'vtable for CgroupController'
/usr/bin/ld: the vtable symbol may be undefined because the class is missing its key function
/home/rehn/source/jdk/vanilla-jdk/open/src/hotspot/os/linux/cgroupSubsystem_linux.hpp:225: error: undefined reference to 'vtable for CgroupSubsystem'
/usr/bin/ld: the vtable symbol may be undefined because the class is missing its key function
collect2: error: ld returned 1 exit status
And slowdebug build failures have shown up in Tier2.
Starting this bug as a P2 since we have build failures.
- backported by
-
JDK-8283568 8230305 causes slowdebug build failure
-
- Resolved
-
-
JDK-8298421 8230305 causes slowdebug build failure
-
- Resolved
-
-
JDK-8359539 8230305 causes slowdebug build failure
-
- Resolved
-
-
JDK-8285292 8230305 causes slowdebug build failure
-
- Closed
-
-
JDK-8295293 8230305 causes slowdebug build failure
-
- Closed
-
- relates to
-
JDK-8230305 Cgroups v2: Container awareness
-
- Resolved
-
- links to
-
Commit
openjdk/jdk8u-dev/362cf762
-
Commit
openjdk/jdk11u-dev/45b78836
-
Review
openjdk/jdk8u-dev/128
-
Review
openjdk/jdk11u-dev/864