8237479: 8230305 causes slowdebug build failure

Declare methods as pure virtual.

Reviewed-by: dcubed, dholmes